src/snapshots/lis_lang__parser__tests__expr_prop_access.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 9,
            line: 0,
            col: 9,
        },
        node: PropAccess {
            obj: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: PropAccess {
                    obj: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                        node: PropAccess {
                            obj: Span {
                                range: Pos {
                                    offset: 0,
                                    line: 0,
                                    col: 0,
                                }..Pos {
                                    offset: 3,
                                    line: 0,
                                    col: 3,
                                },
                                node: Var {
                                    name: "obj",
                                },
                            },
                            dot_tok: Token {
                                sigil: Dot,
                                range: Pos {
                                    offset: 3,
                                    line: 0,
                                    col: 3,
                                }..Pos {
                                    offset: 4,
                                    line: 0,
                                    col: 4,
                                },
                            },
                            prop: "a",
                        },
                    },
                    dot_tok: Token {
                        sigil: Dot,
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                    },
                    prop: "b",
                },
            },
            dot_tok: Token {
                sigil: Dot,
                range: Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                }..Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                },
            },
            prop: "c",
        },
    },
)
