src/snapshots/lis_lang__parser__tests__expr_str_concat.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 18,
            line: 0,
            col: 18,
        },
        node: BinOp {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: Str {
                    val: "hello",
                },
            },
            op: Span {
                range: Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: Concat,
            },
            right: Span {
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 18,
                    line: 0,
                    col: 18,
                },
                node: Str {
                    val: "world",
                },
            },
        },
    },
)
