src/snapshots/lis_lang__parser__tests__expr_unclosed_paren.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "closing parenthesis of expression",
        found: Some(
            Token {
                sigil: Semi,
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
            },
        ),
    },
)
