src/snapshots/lis_lang__parser__tests__multi_param_expr_body.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 12,
            line: 0,
            col: 12,
        },
        node: Lambda {
            pipe_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            params: [
                Span {
                    range: Pos {
                        offset: 1,
                        line: 0,
                        col: 1,
                    }..Pos {
                        offset: 2,
                        line: 0,
                        col: 2,
                    },
                    node: Ident {
                        name: "x",
                    },
                },
                Span {
                    range: Pos {
                        offset: 4,
                        line: 0,
                        col: 4,
                    }..Pos {
                        offset: 5,
                        line: 0,
                        col: 5,
                    },
                    node: Ident {
                        name: "y",
                    },
                },
            ],
            pipe_r: Span {
                range: Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
                node: (),
            },
            body: Span {
                range: Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 7,
                            line: 0,
                            col: 7,
                        }..Pos {
                            offset: 12,
                            line: 0,
                            col: 12,
                        },
                        node: BinOp {
                            left: Span {
                                range: Pos {
                                    offset: 7,
                                    line: 0,
                                    col: 7,
                                }..Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                },
                                node: Var {
                                    name: "x",
                                },
                            },
                            op: Span {
                                range: Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                }..Pos {
                                    offset: 10,
                                    line: 0,
                                    col: 10,
                                },
                                node: Add,
                            },
                            right: Span {
                                range: Pos {
                                    offset: 11,
                                    line: 0,
                                    col: 11,
                                }..Pos {
                                    offset: 12,
                                    line: 0,
                                    col: 12,
                                },
                                node: Var {
                                    name: "y",
                                },
                            },
                        },
                    },
                },
            },
        },
    },
)
