src/snapshots/lis_lang__parser__tests__no_body.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "lambda body",
        found: None,
    },
)
