src/snapshots/lis_lang__parser__tests__no_params_expr_body.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 6,
            line: 0,
            col: 6,
        },
        node: Lambda {
            pipe_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            params: [],
            pipe_r: Span {
                range: Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
                node: (),
            },
            body: Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: Nil,
                    },
                },
            },
        },
    },
)
