src/snapshots/lis_lang__parser__tests__prog_just_1s.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "semicolon or end of input",
        found: Some(
            Token {
                sigil: Num {
                    val: 1.0,
                },
                range: Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
            },
        ),
    },
)
