src/snapshots/lis_lang__parser__tests__prog_just_vars.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Prog {
        stmts: [
            Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        },
                        node: Var {
                            name: "a123",
                        },
                    },
                },
            },
            Span {
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        }..Pos {
                            offset: 13,
                            line: 0,
                            col: 13,
                        },
                        node: Var {
                            name: "foo_bar",
                        },
                    },
                },
            },
            Span {
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 19,
                    line: 0,
                    col: 19,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        }..Pos {
                            offset: 19,
                            line: 0,
                            col: 19,
                        },
                        node: Var {
                            name: "_foo",
                        },
                    },
                },
            },
            Span {
                range: Pos {
                    offset: 21,
                    line: 0,
                    col: 21,
                }..Pos {
                    offset: 27,
                    line: 0,
                    col: 27,
                },
                node: Expr {
                    expr: Span {
                        range: Pos {
                            offset: 21,
                            line: 0,
                            col: 21,
                        }..Pos {
                            offset: 27,
                            line: 0,
                            col: 27,
                        },
                        node: Var {
                            name: "fooBar",
                        },
                    },
                },
            },
        ],
    },
)
